# olist_mart

./: .gitignore  .user.yml  README.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml  requirements.txt  start.sh
macros/: safe_divide.sql  truncate_date.sql
models/dimensions/: dim_customers.sql  dim_customers.yml  dim_dates.sql  dim_products.sql  dim_sellers.sql
models/facts/: fct_orders.sql  fct_orders.yml
models/marts/: mart_revenue_by_category.sql  mart_seller_performance.sql  marts.yml
models/staging/: sources.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_orders.yml  stg_payments.sql  stg_products.sql  stg_sellers.sql
scripts/: load_raw.py
tests/: assert_delivered_has_delivery_date.sql  assert_order_items_sellers_exist.sql  assert_payment_matches_order_value.sql  assert_payment_value_positive.sql  assert_timestamp_ordering.sql
